--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+// CSS VARIABLES
+:root {
+  // FONT SIZES
+  --default-font-size: 16px;
+
+  // COLORS
+  --color-white: #fff;
+  --overall-bg-color: #111;
+
+  // BORDERS
+  --border: 1px solid #ccc;
+}
+
 // MEDIA QUERY BREAKPOINTS
 // 'sm': '640px', => @media (max-width: 640px)
 
@@ -19,3 +32,26 @@
 // $lg
 // $xl
 // $xl2
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: var(--default-font-size);
+  color: var(--color-white);
+  line-height: 1.2;
+  background-color: var(--overall-bg-color);
+  min-height: 100vh;
+}
