--- a/src/components/Weather/Weather.scss
+++ b/src/components/Weather/Weather.scss
@@ -21,4 +21,21 @@
     font-size: 112px;
     font-weight: 400;
   }
+
+  &__location {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    font-weight: 400;
+
+    &--main {
+      font-size: 48px;
+    }
+
+    &--sub {
+      font-size: 14px;
+    }
+  }
 }
