Added the overall CSS styles of the form

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,9 +10,10 @@
   // COLORS
   --color-white: #fff;
   --overall-bg-color: #111;
+  --main-text-color: #ccc;
 
   // BORDERS
-  --border: 1px solid #ccc;
+  --border-bottom: 1px solid #ccc;
 }
 
 // MEDIA QUERY BREAKPOINTS
