--- a/src/components/Panel/Panel.scss
+++ b/src/components/Panel/Panel.scss
@@ -1,5 +1,12 @@
 .panel {
-  border: solid blue;
+  // border: solid blue;
   width: 530px;
   width: 40%;
+  padding: 50px;
+}
+
+.form {
+  display: flex;
+  align-items: center;
+  position: relative;
 }
