--- a/src/components/Panel/Panel.scss
+++ b/src/components/Panel/Panel.scss
@@ -9,4 +9,18 @@
   display: flex;
   align-items: center;
   position: relative;
+
+  &__input {
+    border: none;
+    outline: none;
+    background-color: transparent;
+    padding: 8px 0;
+    padding-right: 30px;
+    border-bottom: var(--border-bottom);
+    width: 100%;
+
+    &::placeholder {
+      color: var(--main-text-color);
+    }
+  }
 }
