--- a/src/components/Panel/Panel.scss
+++ b/src/components/Panel/Panel.scss
@@ -23,4 +23,10 @@
       color: var(--main-text-color);
     }
   }
+
+  &__button {
+    position: absolute;
+    right: 0;
+    padding-bottom: 5px;
+  }
 }
