--- a/src/components/Locations/Locations.scss
+++ b/src/components/Locations/Locations.scss
@@ -5,4 +5,9 @@
   padding-bottom: 40px;
   margin-bottom: 30px;
   border-bottom: var(--border-bottom);
+
+  &__location {
+    font-size: 16px;
+    color: var(--main-text-color);
+  }
 }
