--- a/src/components/Locations/Locations.scss
+++ b/src/components/Locations/Locations.scss
@@ -5,6 +5,8 @@
   padding-bottom: 40px;
   margin-bottom: 30px;
   border-bottom: var(--border-bottom);
+  list-style: none;
+  
 
   &__location {
     font-size: 16px;
