--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -11,6 +11,9 @@
     padding: 8px 0;
     padding-right: 30px;
     border-bottom: var(--border-bottom);
+    font-family: inherit;
+    font-size: 18px;
+    color: var(--color-white);
     width: 100%;
 
     &::placeholder {
@@ -19,9 +22,15 @@
   }
 
   &__button {
+    border: none;
+    outline: none;
     position: absolute;
     right: 0;
-    padding-bottom: 5px;
+    background-color: transparent;
+    cursor: pointer;
+    margin-bottom: -1px;
+    // border: solid red;
+
   }
 
   &__icon {
