Added the CSS styles of the Details component's list container

--- a/src/components/Details/Details.scss
+++ b/src/components/Details/Details.scss
@@ -7,4 +7,11 @@
     text-transform: capitalize;
     margin-bottom: 20px;
   }
+
+  &__list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
 }
