--- a/src/components/Details/Details.scss
+++ b/src/components/Details/Details.scss
@@ -14,4 +14,11 @@
     flex-direction: column;
     gap: 20px;
   }
+
+  &__item {
+    display: flex;
+    justify-content: space-between;
+    font-size: 17px;
+    color: var(--main-text-color);
+  }
 }
