--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,39 @@
 // $xl
 // $xl2
 
+// MEDIA QUERY MANAGER
+@mixin respond($breakpoint) {
+  @if ($breakpoint == xl2) {
+    @media screen and (min-width: 1280px) {
+      @content;
+    }
+  }
+
+  @if ($breakpoint == xl) {
+    @media screen and (max-width: 1280px) {
+      @content;
+    }
+  }
+
+  @if ($breakpoint == lg) {
+    @media screen and (max-width: 1024px) {
+      @content;
+    }
+  }
+
+  @if ($breakpoint == md) {
+    @media screen and (max-width: 768px) {
+      @content;
+    }
+  }
+
+  @if ($breakpoint == sm) {
+    @media screen and (max-width: 640px) {
+      @content;
+    }
+  }
+}
+
 *,
 *::before,
 *::after {
