--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -2,14 +2,15 @@
   min-height: 100vh;
   display: flex;
   justify-content: space-between;
-  background-image: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.3)
-    ),
-    url(../src/assets/images/background.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  // background-image: linear-gradient(
+  //     to right,
+  //     rgba(0, 0, 0, 0.3),
+  //     rgba(0, 0, 0, 0.3)
+  //   ),
+  //   url(../src/assets/images/background.jpg);
+  // background-size: cover;
+  // background-position: center;
+  // background-repeat: no-repeat;
   position: relative;
+  border: solid red;
 }
