--- a/src/components/Weather/Weather.scss
+++ b/src/components/Weather/Weather.scss
@@ -3,22 +3,28 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: flex-start;
   padding: 50px;
+  // border: solid yellow;
 
   &__heading {
     font-size: 20px;
     font-weight: 700;
+    // border: solid blue;
   }
 
   &__content {
     display: flex;
     align-items: center;
     gap: 32px;
+    // border: solid pink;
   }
 
   &__temperature {
-    font-size: 112px;
+    font-size: 60px;
     font-weight: 400;
+    // border: solid red;
+    // border: solid green;
   }
 
   &__location {
@@ -28,6 +34,7 @@
     justify-content: center;
     gap: 16px;
     font-weight: 400;
+    text-align: center;
 
     &--main {
       font-size: 48px;
