Added the functionality of generating 4 random cities when the application is loaded by the browser

--- a/src/components/Locations/Locations.scss
+++ b/src/components/Locations/Locations.scss
@@ -10,5 +10,7 @@
   &__location {
     font-size: 17px;
     color: var(--main-text-color);
+    text-transform: capitalize;
+    cursor: pointer;
   }
 }
