Added the functionality of rendering an active random city when the application is loaded by the browser

--- a/src/components/Locations/Locations.scss
+++ b/src/components/Locations/Locations.scss
@@ -12,5 +12,9 @@
     color: var(--main-text-color);
     text-transform: capitalize;
     cursor: pointer;
+
+    &--active {
+      color: var(--color-orange);
+    }
   }
 }
