--- a/src/components/Weather/Weather.scss
+++ b/src/components/Weather/Weather.scss
@@ -56,6 +56,7 @@
     gap: 16px;
     font-weight: 400;
     text-align: center;
+    text-transform: capitalize;
 
     &--main {
       font-size: 48px;
