--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
   --color-white: #fff;
   --overall-bg-color: #111;
   --main-text-color: #ccc;
+  --color-orange: #fa6d1b;
 
   // BORDERS
   --border-bottom: 1px solid #ccc;
