--- a/src/components/Panel/Panel.scss
+++ b/src/components/Panel/Panel.scss
@@ -6,6 +6,9 @@
   align-items: center;
   justify-content: center;
   padding: 0 50px;
+  background-color: var(--panel-bg-color);
+  box-shadow: var(--panel-box-shadow);
+  backdrop-filter: blur(10px);
 
   @media screen and (max-width: 900px) {
     width: 50%;
@@ -13,6 +16,11 @@
 
   @include index.respond(md) {
     width: 100%;
+    padding: 50px;
+  }
+
+  @include index.respond(sm) {
+    padding: 50px 25px;
   }
 
   .panel__container {
