Added the logic for client-side error handling and routing

--- a/src/components/Details/Details.scss
+++ b/src/components/Details/Details.scss
@@ -19,6 +19,6 @@
     display: flex;
     justify-content: space-between;
     font-size: 17px;
-    color: var(--main-text-color);
+    color: var(--color-white);
   }
 }
