--- a/src/components/Locations/Locations.scss
+++ b/src/components/Locations/Locations.scss
@@ -9,7 +9,7 @@
 
   &__location {
     font-size: 17px;
-    color: var(--main-text-color);
+    color: var(--color-white);
     text-transform: capitalize;
     cursor: pointer;
 
