--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@
   --panel-bg-color: rgba(110, 110, 110, 0.25);
 
   // BORDERS
-  --border-bottom: 1px solid #ccc;
+  --border-bottom: 1px solid var(--color-white);
 
   // SHADOWS
   --panel-box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
@@ -88,4 +88,6 @@ body {
   color: var(--color-white);
   line-height: 1.2;
   background-color: var(--overall-bg-color);
+  position: relative;
+  min-height: 100vh;
 }
